manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scheduler-backend
  labels:
    k8s-app: scheduler-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: scheduler-backend
  template:
    metadata:
      labels:
        k8s-app: scheduler-backend
    spec:
      containers:
        # - image: registry.digitalocean.com/edvora-test-registry/scheduler-api-default:e14c74ef41d086200bc024031c7cd464fd3838cf
        - image : reminder
          imagePullPolicy: Never
          name: web
          ports:
            - containerPort: 5000
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 500Mi
            requests:
              cpu: 50m
              memory: 50Mi
