manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: # ADD HERE
  labels:
    k8s-app: # ADDD HERE
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: #ADD HERE
  template:
    metadata:
      labels:
        k8s-app: # ADD HERE
    spec:
      containers:
        - image: #ADDD HEREEEE
          imagePullPolicy: Always
          name: backend
          ports:
            - containerPort: 5000
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 500Mi
            requests:
              cpu: 50m
              memory: 50Mi
