manifests/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: service-scheduler-backend
  labels:
    k8s-app: scheduler-backend
spec:
  externalTrafficPolicy: Local
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 5000
  selector:
    k8s-app: scheduler-backend
